<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingLeft="@dimen/desc_padding"
        android:paddingRight="@dimen/desc_padding"
        android:text="@string/please_verify_your_phone_number"
        android:gravity="center"
        android:textSize="@dimen/font_middle" />
    <RelativeLayout
        android:layout_marginTop="@dimen/margin20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/country_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/margin5"
            android:orientation="vertical"
            android:background="@mipmap/textfield_card_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_marginRight="@dimen/margin10"
                android:text="@string/country"
                android:textSize="@dimen/font_small" />
            <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="3dp"
                android:textAppearance="@style/TextAppearance.FontPathViewBold"
                android:entries="@array/country_array"
                android:prompt="@string/country_prompt"/>
        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/country_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin10"
            android:padding="@dimen/margin5"
            android:orientation="vertical"
            android:background="@mipmap/textfield_card_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_marginRight="@dimen/margin10"
                android:text="@string/phone_number"
                android:textSize="@dimen/font_small" />
            <EditText
                android:id="@+id/phonenumber_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.FontPathViewBold"
                android:inputType="number"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_marginRight="@dimen/margin10"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/your_number_is_only_used"
        android:gravity="center"
        android:textSize="@dimen/font_small" />

    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/sendsms_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/grey_color"
            android:textAllCaps="true"
            android:text="@string/send_sms"
            android:background="@mipmap/grey_but_bg"/>
    </RelativeLayout>

</LinearLayout>