<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/please_enter_the_code_sent"
        android:gravity="center"
        android:textSize="@dimen/font_middle" />
    <RelativeLayout
        android:layout_marginTop="@dimen/margin20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin5"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/code1_txt"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.FontPathViewBold"
                    android:inputType="number"
                    android:maxLength="1"
                    android:gravity="center"
                    android:textSize="30sp"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/code_line"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin5"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/code2_txt"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.FontPathViewBold"
                    android:inputType="number"
                    android:maxLength="1"
                    android:gravity="center"
                    android:textSize="30sp"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/code_line"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin5"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/code3_txt"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.FontPathViewBold"
                    android:inputType="number"
                    android:maxLength="1"
                    android:gravity="center"
                    android:textSize="30sp"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/code_line"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin5"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/code4_txt"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.FontPathViewBold"
                    android:inputType="number"
                    android:maxLength="1"
                    android:gravity="center"
                    android:textSize="30sp"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/code_line"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/your_number_is_only_used"
        android:gravity="center"
        android:textSize="@dimen/font_small" />

    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/verify_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/grey_color"
            android:textAllCaps="true"
            android:text="@string/verify"
            android:background="@mipmap/grey_but_bg"/>
    </RelativeLayout>

</LinearLayout>