<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/createstory_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/titlebar_bg">
        <Button
            android:id="@+id/back_but"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@mipmap/back_but"/>
        <TextView
            android:layout_toRightOf="@id/back_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"
            android:text="@string/create_story"
            android:textSize="@dimen/font_large" />
        <ImageView
            android:id="@+id/arrow_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin20"
            android:src="@mipmap/arrow_icon"/>
        <Button
            android:id="@+id/done_but"
            android:layout_toLeftOf="@id/arrow_img"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@null"
            android:textAllCaps="false"
            android:text="@string/done"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginStart="@dimen/margin10"
        android:layout_marginEnd="@dimen/margin10"
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginBottom="@dimen/margin10"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/avatar_layout"
            android:layout_width="match_parent"
            android:layout_height="340dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:adjustViewBounds="true"
                android:background="@mipmap/avatar_img"
                tools:scaleType="centerCrop" />
            <TextView
                android:id="@+id/comment_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="@dimen/margin20"
                android:layout_marginRight="@dimen/margin20"
                android:layout_marginBottom="@dimen/margin10"
                android:textColor="@android:color/white"
                android:text="Its too much fun"
                android:layout_alignParentBottom="true"
                android:textSize="@dimen/font_middle" />
        </RelativeLayout>
        <RelativeLayout
            android:padding="10dp"
            android:id="@+id/button_layout"
            android:layout_below="@id/avatar_layout"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/friend_but"
                android:layout_width="40dp"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_height="40dp"
                android:background="@mipmap/friend_but"/>
            <Button
                android:id="@+id/mic_but"
                android:layout_width="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin10"
                android:layout_height="40dp"
                android:background="@mipmap/mic_but"/>
            <Button
                android:layout_toLeftOf="@id/mic_but"
                android:id="@+id/takephoto_but"
                android:layout_width="40dp"
                android:layout_marginRight="@dimen/margin10"
                android:layout_height="40dp"
                android:background="@mipmap/takephoto_but"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/player_layout"
            android:layout_below="@id/button_layout"
            android:layout_marginEnd="@dimen/margin10"
            android:layout_marginStart="@dimen/margin10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/player_card_bg">
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/player_seekbar"
                android:thumb="@mipmap/media_record_but"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin20"
                android:layout_marginRight="18dp"
                android:progressDrawable="@drawable/seek_bar"
                android:progress="0" />
            <Button
                android:id="@+id/media_play_but"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin10"
                android:layout_centerVertical="true"
                android:background="@mipmap/media_play_but"/>
            <TextView
                android:id="@+id/duration_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:text="03:32"
                android:layout_marginTop="33dp"
                android:layout_marginRight="55dp"
                android:layout_alignParentRight="true"
                android:textSize="8sp" />
        </RelativeLayout>
        <RelativeLayout
            android:padding="10dp"
            android:id="@+id/profile_layout"
            android:layout_below="@id/player_layout"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/username_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@android:color/holo_red_light"
                android:text="Jessy"
                android:layout_marginLeft="@dimen/margin10"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/likecount_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin10"
                android:text="12"
                android:layout_marginLeft="@dimen/margin10"
                android:textSize="@dimen/font_middle" />
            <Button
                android:id="@+id/like_but"
                android:layout_toLeftOf="@id/likecount_txt"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:background="@mipmap/heart_selected_icon"/>
        </RelativeLayout>
        <View
            android:id="@+id/line_view"
            android:layout_below="@id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginRight="@dimen/margin10"
            android:background="@color/createstory_background"></View>
        <RelativeLayout
            android:layout_below="@id/line_view"
            android:id="@+id/tag_layout"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/plustag_but"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin10"
                android:textColor="@color/grey_color"
                android:text="@string/plus_tag"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:src="@mipmap/bottom_left_corner"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@mipmap/bottom_right_corner"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@mipmap/top_left_corner"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@mipmap/top_right_corner"/>
    </RelativeLayout>

</LinearLayout>